--- a/pages/components/template2/css/Header.module.css
+++ b/pages/components/template2/css/Header.module.css
@@ -6,15 +6,15 @@
   position: sticky;
   top: 0;
   z-index: 1000;
-  /* padding: 20px 30px; */
-  background-color: #ffffff; /* Transparent by default */
-  box-shadow: none; /* No shadow on transparent background */
-  transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition on scroll */
+  background-color: #4b79a1; /* Background color changed */
+  padding: 20px 30px;
+  box-shadow: none;
+  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .header.scrolled {
-  background-color: #fff; /* Solid background when scrolled */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Shadow for depth */
+  background-color: #4b79a1; /* Keep color consistent on scroll */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .logoContainer {
@@ -24,16 +24,21 @@
 .logo { 
   max-width: 180px;
   height: auto;
+  border-radius: 20px;
 }
 
 .nav {
   display: flex;
   flex: 2;
   justify-content: flex-end;
+  
 }
 
 .nav.open {
   display: flex;
+  background-color: #4b79a1;
+  padding-top: 20px;
+  margin-top: 45px;
 }
 
 .navLinks {
@@ -50,7 +55,7 @@
 
 .navLinks a {
   text-decoration: none;
-  color: #333;
+  color: white; /* White color for navigation links */
   font-size: 18px;
   font-weight: 500;
   position: relative;
@@ -59,7 +64,7 @@
 
 .navLinks a:hover {
   color: #f4a261; /* Accent color on hover */
-  transform: scale(1.1); /* Subtle scale effect on hover */
+  transform: scale(1.1);
 }
 
 .navLinks a::after {
@@ -67,7 +72,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #f4a261;
+  background-color: #f4a261; /* Accent color for underline */
   bottom: 0;
   left: 0;
   transform: scaleX(0);
@@ -76,26 +81,6 @@
 
 .navLinks a:hover::after {
   transform: scaleX(1);
-}
-
-.ctaContainer {
-  display: flex;
-  justify-content: center;
-}
-
-.ctaButton {
-  background-color: #f4a261;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.ctaButton:hover {
-  background-color: #e76f51; /* Darker shade on hover */
 }
 
 .hamburger {
@@ -108,7 +93,7 @@
 .line {
   width: 30px;
   height: 3px;
-  background-color: #fff;
+  background-color: white;
   margin: 5px 0;
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
@@ -117,11 +102,11 @@
   transform: rotate(45deg) translateY(7px);
 }
 
-.line.open:nth-child(2) {
+.line.open:nth-child(3) {
   opacity: 0;
 }
 
-.line.open:nth-child(3) {
+.line.open:nth-child(2) {
   transform: rotate(-45deg) translateY(-7px);
 }
 
@@ -156,7 +141,7 @@
 
 /* Scroll Effect */
 header.scrolled {
-  background-color: #fff;
+  background-color: #4b79a1; /* Keep color consistent on scroll */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
