--- a/pages/components/template2/css/HeroBanner.module.css
+++ b/pages/components/template2/css/HeroBanner.module.css
@@ -126,7 +126,7 @@
 }
 
 .thankYouContent {
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   padding: 30px;
   border-radius: 10px;
   text-align: center;
