--- a/pages/components/template2/css/EnquirePopup.module.css
+++ b/pages/components/template2/css/EnquirePopup.module.css
@@ -102,7 +102,7 @@
 }
 
 .thankYouContent {
-  background: white;
+  background: rgb(7, 6, 6);
   padding: 20px;
   border-radius: 8px;
   text-align: center;
